[project]
name = "kiln-controller"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "setuptools",
    "greenlet",
    "bottle",
    "gevent",
    "gevent-websocket",
    "websocket-client",
    "requests",
    # for folks running raspberry pis
    "rpi-lgpio",
    # List of all supported adafruit modules for thermocouples
    "adafruit-circuitpython-max31855",
    "adafruit-circuitpython-max31856",
    # for folks using sw spi (bit banging)
    "adafruit-circuitpython-bitbangio",
    # untested - for PT100 platinum thermocouples
    # "adafruit-circuitpython-max31865",
    # untested - for mcp9600 and mcp9601
    # "adafruit-circuitpython-mcp9600",
]

[tool.uv]
package = false
